2005-09-17 Pierrick LE GALL

	* translation: common and admin strings translated in french from
	english files

2005-09-14 Pierrick LE GALL

	* improvement: long localized messages are in HTML files instead
	of $lang array. This is the case of admin/help and about pages.

	* deletion: of unused functions (ts_to_mysqldt, is_image,
	TN_exists, check_date_format, date_convert,
	get_category_directories, get_used_metadata_list, array_remove,
	pwg_write_debug, get_group_restrictions,
	get_all_group_restrictions, is_group_allowed, style_select,
	deprecated_getAttribute).

	* new: many new contextual help pages to replace descriptions
	previously included in pages.

	* modification: reorganisation of language files. Deletion of
	unused language keys, alphabetical sort. No faq.lang.php anymore
	(replaced by help.html). Only done for en_UK.iso-8859-1.

2005-09-03 Pierrick LE GALL

	* bug fixed : no display of first added element date in
	admin/intro if no element in the gallery.

2005-09-03 Pierrick LE GALL

	* new : template yoga, made by yoDan, helped by chrisaga for
	integration becomes the official template.

2005-09-03 Pierrick LE GALL

	* modification : less configuration parameters in administration
	screen. These parameters are move to
	include/config_default.inc.php.

	* new : ability to add a single picture to caddie from picture.php

	* new : contextual help, only a few pages are available.

	* new : ability to delete users from admin/user_list

	* modification : reorganization of configuration file

	* new : configuration parameter use_exif_mapping

	* improvement : MOD hidemail added to standard

2005-08-26 Pierrick LE GALL

	* new : HTML BODY identifier to let CSS stylesheets manage
	specific behaviour.

	* deletion : admin/search useless

	* improvement : in admin/user_list, special behaviour for
	true/false fields (expand, show_comments)

	* new : gallery_title and gallery_description are displayed at the
	top of each page.
